--- a/src/index.css
+++ b/src/index.css
@@ -27,3 +27,13 @@ body,
   height: 100%;
   background-color: #F9F9F9;
 }
+
+@media only screen and (min-width: 768px) {
+  .OfficeGirlTwo {
+    width: 100px;
+  }
+
+  .OfficeGirlOne {
+    width: 200px;
+  }
+}
